shift scoring to a dedicated screen
routes : create new state fo score-sheet.html
score-sheet : fix header in top of screen

--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/constante.js"></script>
     <script src="js/routes.js"></script>
     <script src="js/controllers.js"></script>
-    <script src="js/scoreCtrl.js"></script>
+    <script src="js/tab-scoreCtrl.js"></script>
+    <script src="js/score-sheet.js"></script>
     <script src="js/services.js"></script>
     <script src="js/playerFactory.js"></script>
 </head>
